jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zhangjt
  labels:
    name: zhangjt
