jenkins/jenkins-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata: 
  name: jenkins-ingress
  namespace: zhangjt
spec:
  rules:
  - host: jenkins.cloud.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-svc
          servicePort: 8080
